app/styles/featured.less
.FeatureHeading {
  &:extend(h2);
  color: #009A92;
}

.Featured-container {
  display: flex;
  flex-wrap: wrap;
  width: 100vw;
}

.Featured {
  margin: 0;
  position: relative;
  text-align: center;
  width: 100vw;
  height: 100vw;

  @media @tablet {
    width: calc(100vw / 2);
    height: calc(100vw / 2);
  }

  @media @desktop {
    width: calc(100vw / 3);
    height: calc(100vw / 3);
  }
}

.Featured:hover {
  border: none;

  @media @desktop {
    .Featured-title {
      transform: scale(1);
      opacity: 1;
    }
  }
}

.Featured-content {
  transition: opacity 300ms;
  opacity: .9;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 40px;

  @media @desktop {
    opacity: 0;
    transform: translate3d(0, 0, 0);

    &:hover {
      opacity: 1;
    }
  }
}

.Featured-date {
  font-size: 1.5em;
  opacity: 0.7;
  position: absolute;
  top: 40px;
  left: 40px;
  color: #fff;
}

.Featured-year {
  font-size: 1.2em;
}

.Featured-title {
  &:extend(h2);
  margin: 0;
  color: #fff;

  @media @desktop {
    font-size: 2.5vw;
    transform: scale(.9);
    opacity: 0;
    transition: transform 300ms 100ms, opacity 300ms 100ms;
  }
}

.Featured-image {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  background-size: cover;
  opacity: 0.99;
  transition: opacity 300ms;
}

.Featured--oz {
  .Featured-content {
    background-color: #d833e2;
  }

  .Featured-image {
    background-image: url(img/featured/oz.jpg);
  }
}

.Featured--microsoft {
  .Featured-content {
    background-color: #009A92;
  }

  .Featured-image {
    background-image: url(img/featured/microsoft-mobile.png);
  }

  @media @desktop {
    .Featured-image {
      background-image: url(img/featured/microsoft.png);
    }
  }
}

.Featured--oxfam {
  .Featured-content {
    background-color: #9380E2;
  }

  .Featured-image {
    background-image: url(img/featured/oxfam.jpg);
  }
}

.Featured--liveaboard {
  .Featured-content {
    background-color: #215273;
  }

  .Featured-image {
    background-image: url(img/featured/liveaboard.jpg);
  }
}

.Featured--sylvius {
  .Featured-content {
    background-color: #FFCBA1;
  }

  .Featured-image {
    background-image: url(img/featured/sylvius.jpg);
  }
}

.Featured--karneval {
  .Featured-content {
    background-color: #4EB482;
  }

  .Featured-image {
    background-image: url(img/featured/karneval.png);
  }
}

